--- a/style.css
+++ b/style.css
@@ -1,11 +1,89 @@
+*{
+  font-family: "Mochiy Pop One";
+}
+
+body {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  max-width: 900px;
+  margin: 0 auto;
+  background-color: antiquewhite;
+}
+
 #game div {
-  border: 1px solid black;
-  width: 15%;
+  border: 2px solid black;
+  width: 200px;
   height: 200px;
   margin: 10px;
-  display: inline-block;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+
+}
+
+#game div:hover{
+  transform:scale(1.1);
+
+}
+
+h1 {
+  font-size: 70px;
+  text-transform: uppercase;
+  font-family: 'Gambetta', serif;
+  letter-spacing: -3px;
+  transition: 700ms ease;
+  font-variation-settings: "wght" 311;
+  margin-bottom: 0.8rem;
+  outline: none;
+  text-align: center;
+}
+
+h1:hover {
+  font-variation-settings: "wght" 582; 
+  letter-spacing: 1px;
+}
+
+
+
+div{
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .clicked {
   pointer-events: none;
 }
+
+
+button {
+box-sizing: border-box;
+border: none;
+border-radius: 4px;
+padding: 0 16px;
+margin-top: 16px;
+min-width: 128px;
+height: 50px;
+text-align: center;
+text-overflow: ellipsis;
+text-transform: uppercase;
+color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+background-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
+box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+  0 1px 5px 0 rgba(0, 0, 0, 0.12);
+
+font-size: 14px;
+font-weight: 500;
+line-height: 36px;
+overflow: hidden;
+outline: none;
+cursor: pointer;
+transition: all .1s ease-in-out;
+}
+
+button:hover {
+  filter: brightness(110%);
+  transform: scale(1.05);
+}
+
