--- a/style.css
+++ b/style.css
@@ -87,3 +87,34 @@ button:hover {
   transform: scale(1.05);
 }
 
+
+
+
+
+/* MEDIA QUERY */
+@media (max-width: 805px) {
+ 
+  h1 {
+    font-size: 50px;
+  }
+
+  #game div {
+    width: 190px;
+    height: 190px;
+  }
+
+}
+
+
+@media (max-width: 650px) {
+ 
+  h1 {
+    font-size: 50px;
+  }
+
+  #game div {
+    width: 100px;
+    height: 100px;
+  }
+
+}
