--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ height: 50px;
 text-align: center;
 text-overflow: ellipsis;
 text-transform: uppercase;
-color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
-background-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
+color: #F7F7F2;
+background-color: #70D9A5;
 box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
   0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
