--- a/style.css
+++ b/style.css
@@ -63,8 +63,8 @@ border: none;
 border-radius: 4px;
 padding: 0 16px;
 margin-top: 16px;
-min-width: 128px;
-height: 50px;
+min-width: 256px;
+height: 60px;
 text-align: center;
 text-overflow: ellipsis;
 text-transform: uppercase;
@@ -73,18 +73,25 @@ background-color: #70D9A5;
 box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
   0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
-font-size: 14px;
+font-size: 28px;
 font-weight: 500;
 line-height: 36px;
 overflow: hidden;
 outline: none;
 cursor: pointer;
 transition: all .1s ease-in-out;
+
+
 }
 
 button:hover {
   filter: brightness(110%);
   transform: scale(1.05);
+}
+
+
+.blur {
+  filter: blur(5px);
 }
 
 
