--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 h1 {
-  font-size: 70px;
+  font-size: 65px;
   text-transform: uppercase;
   font-family: 'Gambetta', serif;
   letter-spacing: -3px;
@@ -38,11 +38,25 @@ h1 {
   margin-bottom: 0.8rem;
   outline: none;
   text-align: center;
+
+}
+
+h2 {
+  display: flex;
+  width: 100%;
+ letter-spacing: 4px;
+ opacity: 0.7;
+ font-size: 20px;
 }
 
 h1:hover {
   font-variation-settings: "wght" 582; 
   letter-spacing: 1px;
+}
+
+#score {
+  color: #70D9A5;
+
 }
 
 
